# microservices-projects

./: Dockerfile  pyproject.toml
app/: main.py
app/core/: logger.py  settigs.py
app/database/: session.py
