[project]
name = "microservices-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.2",
    "gunicorn>=23.0.0",
    "orjson>=3.11.3",
    "phonenumbers>=9.0.15",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
]
